[package]
name = "wenyan-to-rust"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peek-nth = "0.2.0"
clap = "2.33.1"
serde_json = "1.0.57"
bimap = "0.5.2"
position = "0.0.3"
bimap_plus_map = "0.1.1"